test/success/union.dsk
union Response
    success: string
    error: string

let res = Response(success = "Sucesso")
let err = Response(error = "Error")


