test/error/parser/union-missing-end.dsk
union Response
    success: string
    error: string
